# mtm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/mtm/: __init__.py  machine.py  tape.py
tmp_dist/multitape_tm-1.0.2/multitape_tm-1.0.2.dist-info/: METADATA  RECORD
